# kokoro_tts

./: .gitignore  .metadata  README.md  ffigen.yaml  patch_android_log.dart  patch_audio_session.dart  patch_cpp.dart  patch_cpp2.dart  patch_cpp3.dart  patch_dart_log.dart  patch_espeak.dart  patch_pitch.dart  patch_pitch_single.dart  patch_pitch_slider.dart  patch_ui.dart  pubspec.yaml  test_espeak.c  update_cpp.dart  update_cpp_float.dart
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  print_wav.dart  pubspec.yaml  test_onnx.py
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/rgbsi/kokoro_tts_example/: MainActivity.kt
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: kokoro_tts.podspec
ios/Classes/: KokoroTtsPlugin.h  KokoroTtsPlugin.m  audio_data.cpp  kokoro_tts.cpp
ios/src/: CMakeLists.txt  audio_data.h  check_style.py  flatten_voices.py  generate_vocab.py  kokoro_tts.cpp
ios/src/espeak-ng/dictsource/: ru_list  ru_rules
ios/src/espeak-ng/src/libespeak-ng/: spect.c
ios/src/lib/onnxruntime-android-1.14.0/: AndroidManifest.xml
lib/: kokoro_tts.dart  kokoro_tts_bindings_generated.dart
src/: CMakeLists.txt  check_style_usage.py  inspect_npy.py  inspect_voices.py  kokoro_tts.cpp  kokoro_tts.h  kokoro_vocab.h
